[gd_scene load_steps=2 format=3 uid="uid://bkp0jvpu4joh5"]

[ext_resource type="Script" uid="uid://b7bwdo0oskkks" path="res://scenes/components/hurt_box.gd" id="1_eeq1w"]

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_eeq1w")

[node name="InvinciblityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="InvinciblityTimer" to="." method="_on_invinciblity_timer_timeout"]
